# BitPin-Task

./: .env.dev  .env.prod  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
app/: locustfile.py  manage.py  pyproject.toml
app/bitpin/: asgi.py  urls.py  wsgi.py
app/posts/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/posts/migrations/: 0001_initial.py  0002_initial.py
app/posts/tests/: test_models.py
app/settings/: production.py  settings.py
app/users/: serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/tests/: test_views.py
bitpin/: asgi.py  urls.py
nginx/: nginx.conf
posts/: models.py  serializers.py  urls.py  views.py
settings/: production.py  settings.py
